feat: ajuste nos links e efeitos de hover

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br" class="light">
   <head>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -39,7 +39,6 @@
         <li>
           <a
             href="https://www.linkedin.com/in/jos%C3%A9-lucas-leite-da-silva-18981618b/"
-            target="_blank"
             >Meu linkedin</a
           >
         </li>
